Fixed showcase bug

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Hospital Top Top | Equipo Médico</title>
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
+
   <body>
     <header class="navbar fixed-top bg-primary pt-1 pb-0">
       <div class="navbar-brand fw-bold text-light ps-1">
@@ -40,8 +41,13 @@
         >
       </nav>
     </header>
+    <section class="showcase">
+      <h1 class="showcase__title">Dudas?</h1>
+      <p class="showcase__subtitle">
+        Contactanos y te responderemos rápidamente
+      </p>
+    </section>
     <section class="form__container">
-      <h1 class="form__title">Contáctanos</h1>
       <form action="">
         <div class="form__item">
           <label class="form__label" for="name"> Nombre: </label>
