Used Bootstrap grid about screen

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="navbar fixed-top bg-primary pt-1 pb-0">
-      <div class="navbar-brand fw-bold text-light ps-1">
+      <div class="navbar-brand fw-bold text-light ps-1 col">
         <img
           src="assets/img/logo.png"
           alt="Logo del Hospital"
@@ -29,7 +29,7 @@
           >Inicio</a
         >
         <a
-          class="header__nav__link text-decoration-none text-light bg-dark fw-bold rounded-top"
+          class="header__nav__link text-decoration-none text-light bg-dark fw-bold rounded"
           href="about.html"
           >Equipo Médico</a
         >
@@ -46,14 +46,14 @@
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, odit.
       </p>
     </section>
-    <section class="team__section">
-      <article class="doctor">
+    <div class="team__section">
+      <article class="row doctor">
         <img
-          class="doctor__img"
+          class="rounded-circle col-6 col-lg-3 doctor__img"
           src="assets/img/doctor1.png"
           alt="Foto Cirujano"
         />
-        <div class="doctor__info">
+        <div class="doctor__info col">
           <h1 class="doctor__name">Tío Pelado</h1>
           <h2 class="doctor__job">Cirujano Estético</h2>
           <p class="doctor__profile">
@@ -66,13 +66,13 @@
           </p>
         </div>
       </article>
-      <article class="doctor">
+      <article class="doctor row">
         <img
-          class="doctor__img"
+          class="doctor__img col-6 col-lg-3"
           src="assets/img/doctor2.jpg"
           alt="Foto Traumatólogo"
         />
-        <div class="doctor__info">
+        <div class="doctor__info col">
           <h1 class="doctor__name">Freddy Turbina</h1>
           <h2 class="doctor__job">Traumatólogo</h2>
           <p class="doctor__profile">
@@ -85,13 +85,13 @@
           </p>
         </div>
       </article>
-      <article class="doctor">
+      <article class="doctor row">
         <img
-          class="doctor__img"
+          class="doctor__img col-6 col-lg-3"
           src="assets/img/doctor3.jpg"
           alt="Foto Odontólogo"
         />
-        <div class="doctor__info">
+        <div class="doctor__info col">
           <h1 class="doctor__name">John Quijada</h1>
           <h2 class="doctor__job">Cirujano Máxilo-Facial</h2>
           <p class="doctor__profile">
@@ -104,13 +104,13 @@
           </p>
         </div>
       </article>
-      <article class="doctor">
+      <article class="doctor row">
         <img
-          class="doctor__img"
+          class="doctor__img col-6 col-lg-3"
           src="assets/img/doctor4.jpg"
           alt="Foto Psicologo"
         />
-        <div class="doctor__info">
+        <div class="doctor__info col">
           <h1 class="doctor__name">Joe Pino</h1>
           <h2 class="doctor__job">Psicólogo</h2>
           <p class="doctor__profile">
@@ -123,7 +123,7 @@
           </p>
         </div>
       </article>
-    </section>
+    </div>
     <footer class="footer">
       <div class="footer__section">
         <h3 class="footer__section__title">Telefonos:</h3>
