--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
   <body>
     <header class="navbar fixed-top bg-primary pt-1 pb-0">
-      <div class="navbar-brand fw-bold text-light ps-1">
+      <div class="navbar-brand fw-bold text-light ps-1 col">
         <img
           src="assets/img/logo.png"
           alt="Logo del Hospital"
@@ -35,7 +35,7 @@
           >Equipo Médico</a
         >
         <a
-          class="header__nav__link text-decoration-none text-light bg-dark fw-bold rounded-top"
+          class="header__nav__link text-decoration-none text-light bg-dark fw-bold rounded"
           href="contact.html"
           >Contacto</a
         >
